# zbo

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  WORKSPACE
.github/workflows/: ccpp.yml
bazel/: buildbuddy.bazelrc  macprofiler.bazelrc  sanitizer.bazelrc
cmake/: ClangTidy.cmake  Conan.cmake
docker/: Dockerfile
zbo/: BUILD  CMakeLists.txt  circular_range.h  circular_range_test.cpp  contracts.h  factory.h  factory_test.cpp  max_size_vector.h  max_size_vector_test.cpp  meta_enum.h  meta_enum_iterator.h  meta_enum_test.cpp  named_type.h  named_type_test.cpp  stop_watch.h  stop_watch_test.cpp  stream_container.h
zbo/detail/: meta_enum_detail.h
