include(GoogleTest)

add_library(circular_range INTERFACE)
add_executable(circular_range_test circular_range_test.cpp)
target_link_libraries(circular_range_test circular_range CONAN_PKG::gtest)
target_enable_clang_tidy(circular_range_test)
gtest_add_tests(TARGET circular_range_test)

add_library(max_size_vector INTERFACE)
add_executable(max_size_vector_test max_size_vector_test.cpp)
target_link_libraries(max_size_vector_test max_size_vector CONAN_PKG::gtest)
gtest_add_tests(TARGET max_size_vector_test)
target_enable_clang_tidy(max_size_vector_test)

add_library(meta_enum INTERFACE)
add_executable(meta_enum_test meta_enum_test.cpp)
target_link_libraries(meta_enum_test meta_enum CONAN_PKG::gtest)
gtest_add_tests(TARGET meta_enum_test)
target_enable_clang_tidy(meta_enum_test)

add_library(stop_watch INTERFACE)
add_executable(stop_watch_test stop_watch_test.cpp)
target_link_libraries(stop_watch_test stop_watch CONAN_PKG::gtest)
gtest_add_tests(TARGET stop_watch_test)
target_enable_clang_tidy(stop_watch_test)

add_library(factory INTERFACE)
add_executable(factory_test factory_test.cpp)
target_link_libraries(factory_test factory CONAN_PKG::gtest)
gtest_add_tests(TARGET factory_test)
target_enable_clang_tidy(factory_test)

add_library(named_type INTERFACE)
add_executable(named_type_test named_type_test.cpp)
target_link_libraries(named_type_test named_type CONAN_PKG::gtest)
gtest_add_tests(TARGET named_type_test)
target_enable_clang_tidy(named_type_test)
